MVP is ready to work